# name-tag-generator

./: .gitmodules  CMakeLists.txt  README.md  TODO.md
include/: canvas.h  image.h  shader.h  texture.h  ui_image.h  ui_manager.h  ui_textbox.h  ui_widget.h
shaders/: text.vert  ui_image.frag  ui_image.vert
src/: canvas.cpp  main.cpp  ui_image.cpp  ui_manager.cpp  ui_textbox.cpp  ui_widget.cpp
